--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <title>CSCE 190: [Ashritha Natarajan, Welcome to CSCE 190]</title>
 </head>
 <body>
-<h1>[your name]</h1>
+<h1>[Ashritha Natarajan]</h1>
 </body>
 </html>
