little bit bigger change

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CSCE 190: [Ashritha Natarajan, Welcome to CSCE 190]</title>
+<title>CSCE 190: Ashritha Natarajan</title>
+<link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-<h1>[Ashritha Natarajan]</h1>
+<h1>[Ashritha Natarajan, 2024]</h1>
+
+<h2>About me</h2>
+<div class="about"></div>
+
+<h2>Skills</h2>
+<div class="skills"></div>
+
+<hs>Highlighted projects</hs>
+<div class="project"></div>
+
+<h2>Contact me</h2>
+<div class="contract"></div>
+
 </body>
 </html>
