--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
 <div class="skills"></div>
 
 <hs>Highlighted projects</hs>
-<div class="project"></div>
-
-<h2>Contact me</h2>
+<div class="project">
+    <div class = "projects">
+        <!-- Problem Statement Assignment -->
+        <section class="project">
+        <a href="files/statement.pdf">
+            <h3>Problem Statement</h3></a>
+        <a href="files/statement.pdf">
+            <img src="Images1/--"></a>
+        <p>Students at Universities or in college often find it difficult to manage their time as they have to navigate numerous classes, all while maintaining connections and attempting to become involved with student organizations.</p>
+        </section>
+        </div>
+<p> </p>
+<h2>Contact me :D </h2>
 <div class="contract"></div>
 
 </body>
