--- a/index.html
+++ b/index.html
@@ -18,12 +18,24 @@
     <div class = "projects">
         <!-- Problem Statement Assignment -->
         <section class="project">
-        <a href="files/statement.pdf">
+        <a href="files/Time Management Problem Statement.pdf">
             <h3>Problem Statement</h3></a>
-        <a href="files/statement.pdf">
-            <img src="Images1/--"></a>
+        <a href="files/Time Management Problem Statement.pdf">
+            <img src="Images1/Problem_statement.png"></a>
         <p>Students at Universities or in college often find it difficult to manage their time as they have to navigate numerous classes, all while maintaining connections and attempting to become involved with student organizations.</p>
         </section>
+
+        <!--Affinity Diagram Assignment -->
+     <section class="project">
+       <a href="files/Affinity_diagram.pdf">
+        <h3>Affinity Diagram</h3></a>
+       <a href="files/Affinity_diagram.pdf">
+        <img src="Images1/Affinity_Diagram.png"></a>
+      <p>
+        Affinity Diagram with 5 Categories and 20 ideas about Time Management
+     </p>
+      </section>
+
         </div>
 <p> </p>
 <h2>Contact me :D </h2>
