--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
         <a href="files/Time Management Problem Statement.pdf">
             <img src="Images1/Problem_statement.png"></a>
         <p>Students at Universities or in college often find it difficult to manage their time as they have to navigate numerous classes, all while maintaining connections and attempting to become involved with student organizations.</p>
-        </section>
+       
+    <!--Affinity Diagram Assignment -->
+    <section class="project">
+    <a href="files/Affinity Diagram CSCE 190.pdf">
+        <h3>Affinity Diagram</h3></a>
+    <a href="files/Affinity_DOC.pdf">
+        <img src="Images1/Affinity Diagram CSCE 190.png"></a>
+    <p> Affinity Diagram with 5 cateogories and 4 topics for each to describe problems and solution around Time Management</p>
+    </section>    
+    </section>
+
 
       </section>
 
