--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-<h1>[Ashritha Natarajan, 2024]</h1>
+<h1>Ashritha Natarajan</h1>
 
 <h2>About me</h2>
 <div class="about"></div>
@@ -15,30 +15,48 @@
 
 <hs>Highlighted projects</hs>
 <div class="project">
-    <div class = "projects">
         <!-- Problem Statement Assignment -->
         <section class="project">
         <a href="files/Time Management Problem Statement.pdf">
-            <h3>Problem Statement</h3></a>
+            <h3>Problem Statement</h3>
+        </a>
         <a href="files/Time Management Problem Statement.pdf">
-            <img src="Images1/Problem_statement.png"></a>
+            <img src="Images1/Problem_statement.png">
+        </a>
         <p>Students at Universities or in college often find it difficult to manage their time as they have to navigate numerous classes, all while maintaining connections and attempting to become involved with student organizations.</p>
-       
+       </section>
+
     <!--Affinity Diagram Assignment -->
     <section class="project">
     <a href="files/Affinity Diagram CSCE 190.pdf">
-        <h3>Affinity Diagram</h3></a>
+        <h3>Affinity Diagram</h3>
+    </a>
     <a href="files/Affinity_DOC.pdf">
-        <img src="Images1/Affinity Diagram CSCE 190.png"></a>
+        <img src="Images1/Affinity Diagram CSCE 190.png" witdth="300" height="300">
+    </a>
     <p> Affinity Diagram with 5 cateogories and 4 topics for each to describe problems and solution around Time Management</p>
     </section>    
+
+    <!--Sketches Assignment-->
+<section class="project">
+    <a href="files/Draft_Prototype.pdf">
+        <h3>Sketches </h3>
+    </a>
+    <a href="files/Draft_Prototype.pdf">
+        <img src="Images1/draft_Calculator.jpg">
+    </a>
+    <p>
+    This is the Prototype for the Calculator, Calendar, and the Homepage 
+    </p>
     </section>
+    
 
 
-      </section>
+
 
         </div>
-<p> </p>
+
+
 <h2>Contact me :D </h2>
 <div class="contract"></div>
 
