--- a/index.html
+++ b/index.html
@@ -7,21 +7,28 @@
 <body>
 <h1>Ashritha Natarajan</h1>
 
-<h2>About me</h2>
-<div class="about"></div>
+<!-- About Me -->
+<h2> About Me </h2>
+<div class="about">
 
-<h2>Skills</h2>
-<div class="skills"></div>
+<p>
+    Hello! My name is Ashritha Natarajan. I am a Freshman at University of South Carolina, studying Computer Science. I'm passionate
+    about learning about new technology which can helps us in our daily tasks. My goal is to develop new techonolgies which can help people in need.
+    
+</p>
+</div>
 
-<hs>Highlighted projects</hs>
-<div class="project">
+
+
+<h2>Highlighted projects</h2>
+<div class="projects">
         <!-- Problem Statement Assignment -->
         <section class="project">
         <a href="files/Time Management Problem Statement.pdf">
             <h3>Problem Statement</h3>
         </a>
         <a href="files/Time Management Problem Statement.pdf">
-            <img src="Images1/Problem_statement.png">
+            <img src="Images1/Problem_statement.png" id="id" >
         </a>
         <p>Students at Universities or in college often find it difficult to manage their time as they have to navigate numerous classes, all while maintaining connections and attempting to become involved with student organizations.</p>
        </section>
@@ -55,6 +62,9 @@
 
 
         </div>
+
+        <h2>Skills</h2>
+<div class="skills"></div>
 
 
 <h2>Contact me :D </h2>
