--- a/index.html
+++ b/index.html
@@ -56,6 +56,14 @@
     This is the Prototype for the Calculator, Calendar, and the Homepage 
     </p>
     </section>
+
+
+
+    <div class = "skills">
+        <p><b>Category 1:</b>Details for category 1</p>
+        <p><b>Category 2:</b>Details for category 2</p>
+        <p><b>Resume:</b><a href="UResume.pdf">Download here</a></p>
+        </div>
     
 
 
@@ -63,8 +71,7 @@
 
         </div>
 
-        <h2>Skills</h2>
-<div class="skills"></div>
+        
 
 
 <h2>Contact me :D </h2>
