--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
     This is the Prototype for the Calculator, Calendar, and the Homepage 
     </p>
     </section>
+    <section class="project">
+        <a href="https://github.com/AshrithaNat/CITMW">
+        <h3>Java Code for CSCE 190</h3>
+        </a>
+        <a href="https://github.com/AshrithaNat/CITMW">
+        <img src= "Images1/java-coding-best-practices.jpg">
+        </a>
+        <p>Example Java Code for CSCE 190</p>
+        </section>
 
 
 
