--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <!-- About Me -->
 <h2> About Me </h2>
 <div class="about">
-    <img src="Images1/mypic.jpg">
+    <img src="Images1/mypic.jpg" witdth="300" height="300">
 
 <p>
     Hello! My name is Ashritha Natarajan. I am a Freshman at University of South Carolina, studying Computer Science. I'm passionate
@@ -65,10 +65,10 @@
     </section>
     <!-- Paper Prototype Video Assignment -->
     <section class="project">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/1Kvr22xBRvU?si=czAghtY7yTWnkcyL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        <a href="https://github.com/AshrithaNat/CITMW">
         <h3>Video Concept</h3>
-        <p>This video describes the concepts Paper Prototype of the app.</p>
+        <iframe width="460" height="315" src="https://www.youtube.com/embed/1Kvr22xBRvU?si=czAghtY7yTWnkcyL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <a href="https://github.com/AshrithaNat/CITMW"> </a>       
+        <p>This video describes the concepts of the Paper Prototype of the app.</p>
         </section>
         <!-- Repo 1 --> 
          <section class="project">   
