--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a href="files/Affinity Diagram CSCE 190.pdf">
         <h3>Affinity Diagram</h3>
     </a>
-    <a href="files/Affinity_DOC.pdf">
+    <a href="files/Affinity Diagram CSCE 190.pdf">
         <img src="Images1/Affinity Diagram CSCE 190.png" witdth="300" height="300">
     </a>
     <p> Affinity Diagram with 5 cateogories and 4 topics for each to describe problems and solution around Time Management</p>
